--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -947,6 +947,7 @@
 <script src="~/Asset/js/wow.min.js"></script> 
 <!-- Custom script for all pages --> 
 <script src="~/Asset/js/script.js"></script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
 
