xoá home area + back to home button

--- a/SuperMarket_Client/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/Register.cshtml
@@ -43,6 +43,9 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+        <div>
+            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Back to Login</a>
+        </div>
     </div>
 </div>
 
