--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -199,8 +199,7 @@
         <div class="col-xl-6">
           <div class="breadcrumb_content mt15">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page"><a href="#">My Account</a></li>
+              <li class="breadcrumb-item"><a asp-area="Customer" asp-controller="Home" asp-action="Index">Back to Home</a></li>
             </ol>
           </div>
         </div>
