--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="~/Asset/css/bootstrap.min.css">
 <link rel="stylesheet" href="~/Asset/css/style.css">
 <link rel="stylesheet" href="~/Asset/css/dashbord_navitaion.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 <!-- Responsive stylesheet -->
 <link rel="stylesheet" href="css/responsive.css">
 <!-- Title -->
@@ -210,6 +211,7 @@
   <!-- ==================================================================================================================== -->
     <section class="container">
         <main role="main" class="pb-3">
+            <partial name="_Notification" />
             @RenderBody()
         </main>
     </section>
@@ -330,6 +332,10 @@
   </section>
   <a class="scrollToHome" href="#"><i class="fa fa-angle-up"></i></a> </div>
 <!-- Wrapper End --> 
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="~/Asset/js/jquery-3.6.0.js"></script> 
 <script src="~/Asset/js/jquery-migrate-3.0.0.min.js"></script> 
 <script src="~/Asset/js/popper.min.js"></script> 
@@ -350,6 +356,10 @@
 <script src="~/Asset/js/wow.min.js"></script> 
 <!-- Custom script for all pages --> 
 <script src="~/Asset/js/script.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+<script src="https://cdn.tiny.cloud/1/t0cc6iw0zgyf2cce0nwq9yqftiwgrw6obfqmb1b45t650dfj/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+
+
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
