--- a/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div>
+﻿@model Task<SuperMarket_Models.Models.Customer>
+<div>
 	<!-- Our Dashbord -->
 	<section class="our-dashbord dashbord">
 		<div class="container">
