--- a/SuperMarket_Client/Views/Shared/_LoginPartial.cshtml
+++ b/SuperMarket_Client/Views/Shared/_LoginPartial.cshtml
@@ -10,6 +10,9 @@
         <a id="manage" class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
     <li class="list-inline-item">
+        <a id="manage" class="nav-link text-light" asp-area="Customer" asp-route-id="@UserManager.GetUserId(User)" asp-controller="Customer" asp-action="Index" >My Account</a>
+    </li>
+    <li class="list-inline-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-light">Logout</button>
         </form>
