Map page checkout, complete order, cart

--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 <body>
 <div class="wrapper ovh">
   <div class="preloader"></div>
-  <div class="popup_onload_modal">
+  @*<div class="popup_onload_modal">
     <!-- Modal -->
     <div class="modal fade" id="mailchimp_newslatter_popup" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="mailchimp_newslatter_popup" aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -84,7 +84,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>*@
   
   <!-- header top -->
   <div class="header_top bgc-thm2 dn-992">
