--- a/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SuperMarket_Models.Models.Customer
+<!-- Our Dashbord -->
 <div>
-	<!-- Our Dashbord -->
 	<section class="our-dashbord dashbord">
 		<div class="container">
 			<div class="row">
@@ -9,11 +9,11 @@
 						<h3 class="mb25 ttu fwb">My account</h3>
 						<div class="ed_menu_list">
 							<ul>
-								<li><a class="active" href="page-dashboard.html">Dashboard</a></li>
+								<li><a href="page-dashboard.html">Dashboard</a></li>
 								<li><a href="page-dashboard-order.html">Orders</a></li>
-								<li><a href="page-dashboard-wish-list.html">Category Management</a></li>
-								<li><a href="page-dashboard-address.html">Product Management</a></li>
-								<li><a href="page-dashboard-account-details.html">Customer Account Details</a></li>
+								<li><a href="page-dashboard-wish-list.html">Downloads</a></li>
+								<li><a href="page-dashboard-address.html">Addresses</a></li>
+								<li><a class="active" href="page-dashboard-account-details.html">Account Details</a></li>
 								<li><a href="page-dashboard-wish-list.html">Wishlist</a></li>
 								<li><a href="page-login.html">Logout</a></li>
 							</ul>
@@ -27,11 +27,11 @@
 								<div class="dropdown">
 									<button onclick="myFunction()" class="dropbtn"><i class="fa fa-bars pr10"></i> Dashboard Navigation</button>
 									<ul id="myDropdown" class="dropdown-content">
-										<li><a class="active" href="page-dashboard.html">Dashboard</a></li>
-										<li><a href="page-dashboard-profile.html">Orders</a></li>
-										<li><a href="page-dashboard-wish-list.html">Category Management</a></li>
-										<li><a href="page-dashboard-address.html">Product Management</a></li>
-										<li><a href="page-dashboard-account-details.html">Customer Account Details</a></li>
+										<li><a href="page-dashboard.html">Dashboard</a></li>
+										<li><a href="page-dashboard-order.html">Orders</a></li>
+										<li><a href="page-dashboard-wish-list.html">Downloads</a></li>
+										<li><a href="page-dashboard-address.html">Addresses</a></li>
+										<li><a class="active" href="page-dashboard-account-details.html">Account Details</a></li>
 										<li><a href="page-dashboard-wish-list.html">Wishlist</a></li>
 										<li><a href="page-login.html">Logout</a></li>
 									</ul>
@@ -40,10 +40,47 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-xl-8">
-							<div class="user_deails mt70">
-								@Html.DisplayNameFor(model=>model.FullName)
-								@Html.DisplayFor(model=>model.FullName)
+						<div class="col-xl-9">
+							<div class="row">
+								<form method="post" asp-action="UpdateCustomer" enctype="multipart/form-data">
+									<input type="text" asp-for="Id" value="@Model.Id" hidden>
+									<div class="col-lg-12">
+										<div class="form-group mb25">
+											<label class="mb10 fz14 heading-color">Full Name</label>
+											<input type="text" asp-for="FullName" class="form-control form_control" value="@Model.FullName">
+										</div>
+									</div>
+									<div class="col-lg-6">
+										<div class="form-group mb25">
+											<input type="file" name="file" />
+											<img class="pt-2" src="~/Images/274921743_536756477795635_5684064206547991241_n.jpg" />
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group mb25">
+											<label class="mb10 fz14 heading-color">Address</label>
+											<input type="text" asp-for="Address" class="form-control form_control" value="@Model.Address">
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group mb60">
+											<label class="mb10 fz14 heading-color">Email address </label>
+											<input type="text" asp-for="Email" readonly class="form-control form_control" value="@Model.Email">
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group mb60">
+											<label class="mb10 fz14 heading-color">Phone number</label>
+											<input type="text" asp-for="PhoneNumber" class="form-control form_control" value="@Model.PhoneNumber">
+										</div>
+									</div>
+									<div class="col-xl-12 pt-8">
+										<div class="form-group mb0">
+											<button type="submit" id="Submitbtn" class="btn btn-thm update_btn">SAVE CHANGES</button>
+											<a id="manage" class="btn btn-thm update_btn" asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Manage">Change Password</a>
+										</div>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
@@ -74,4 +111,3 @@
 <script src="js/dashboard-script.js"></script>
 <!-- Custom script for all pages -->
 <script src="js/script.js"></script>
-
