them city country+customer details

--- a/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
@@ -63,6 +63,18 @@
 										</div>
 									</div>
 									<div class="col-lg-12">
+										<div class="form-group mb25">
+											<label class="mb10 fz14 heading-color">City</label>
+											<input type="text" asp-for="City" class="form-control form_control" value="@Model.City">
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group mb25">
+											<label class="mb10 fz14 heading-color">Country</label>
+											<input type="text" asp-for="Country" class="form-control form_control" value="@Model.Country">
+										</div>
+									</div>
+									<div class="col-lg-12">
 										<div class="form-group mb60">
 											<label class="mb10 fz14 heading-color">Email address </label>
 											<input type="text" asp-for="Email" readonly class="form-control form_control" value="@Model.Email">
