Update Add to cart Ajax Call

--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model SuperMarket_Models.ViewModels.ShoppingCartVM
 	<!-- Shop Checkouts Content -->
 	<section class="shop-cart">
 		<div class="container">
@@ -20,42 +20,21 @@
                           </tr>
                         </thead>
                         <tbody class="table_body">
-                          <tr>
-                            <th scope="row">
-                              <ul class="cart_list">
-                                <li class="list-inline-item"><a class="close_img" href="#"><img src="images/shop/close.png" alt=""></a></li>
-                                <li class="list-inline-item pr10"><a href="#"><img src="images/shop/cart1.png" alt="cart1.png"></a></li>
-                                <li class="list-inline-item"><a class="cart_title" href="#">Silver Heinz Ketchup 350 ml</a></li>
-                              </ul>
-                            </th>
-                            <td>$7.63</td>
-                            <td><input class="cart_count text-center" placeholder="2" type="number"></td>
-                            <td class="text-thm">$347.63</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">
-                              <ul class="cart_list">
-                                <li class="list-inline-item"><a class="close_img" href="#"><img src="images/shop/close.png" alt=""></a></li>
-                                <li class="list-inline-item pr10"><a href="#"><img src="images/shop/cart1.png" alt="cart1.png"></a></li>
-                                <li class="list-inline-item"><a class="cart_title" href="#">Silver Heinz Ketchup 350 ml</a></li>
-                              </ul>
-                            </th>
-                            <td>$7.63</td>
-                            <td><input class="cart_count text-center" placeholder="2" type="number"></td>
-                            <td class="text-thm">$347.63</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">
-                              <ul class="cart_list">
-                                <li class="list-inline-item"><a class="close_img" href="#"><img src="images/shop/close.png" alt=""></a></li>
-                                <li class="list-inline-item pr10"><a href="#"><img src="images/shop/cart1.png" alt="cart1.png"></a></li>
-                                <li class="list-inline-item"><a class="cart_title" href="#">Silver Heinz Ketchup 350 ml</a></li>
-                              </ul>
-                            </th>
-                            <td>$7.63</td>
-                            <td><input class="cart_count text-center" placeholder="2" type="number"></td>
-                            <td class="text-thm">$347.63</td>
-                          </tr>
+                            @foreach (var item in Model.ListCart)
+                            {
+                                 <tr>
+                                    <th scope="row">
+                                      <ul class="cart_list">
+                                        <li class="list-inline-item"><a class="close_img" href="#"><img src="images/shop/close.png" alt=""></a></li>
+                                        <li class="list-inline-item pr10"><a href="#"><img src="images/shop/cart1.png" alt="cart1.png"></a></li>
+                                        <li class="list-inline-item"><a class="cart_title" href="#">@item.Product.Title</a></li>
+                                      </ul>
+                                    </th>
+                                    <td>@item.Product.Price.ToString("c")</td>
+                                    <td><input class="cart_count text-center" placeholder="@item.Count" type="number"></td>
+                                    <td class="text-thm">@((item.Product.Price * @item.Count).ToString("c"))</td>
+                                </tr>                 
+                            }
                         </tbody>
                       </table>
                       <div class="checkout_form mt30">
@@ -63,7 +42,6 @@
                           <form class="df db-520">
                             <input class="form-control coupon_input" type="search" placeholder="Coupon code" aria-label="Search">
                             <button type="button" class="btn btn2 btn-thm">Apply Coupon</button>
-                            <button type="button" class="btn btn3">Update Cart</button>
                           </form>
                         </div>
                       </div>
@@ -73,7 +51,7 @@
                     <div class="order_sidebar_widget style2">
                       <h4 class="title">Cart Totals</h4>
                       <ul>
-                        <li class="subtitle"><p>Subtotal <span class="float-end">$907.00</span></p> <hr></li>
+                        <li class="subtitle"><p>Subtotal <span class="float-end">@Model.Order.OrderTotal.ToString("c")</span></p> <hr></li>
                         <li>
                           <div class="ui_kit_radiobox shopping_cart_radio_box">
                             <div class="radio">
@@ -106,225 +84,6 @@
                   </div>
                 </div>
               </div>
-              <div class="tab-pane fade" id="checkout" role="tabpanel" aria-labelledby="checkout-tab">
-                <div class="row">
-                  <div class="col-lg-8 col-xl-9">
-                    <div class="checkout_form style2">
-                      <h4 class="title mb40">Billing Details</h4>
-                      <div class="checkout_coupon ui_kit_button">
-                        <form class="form2" id="coupon_form" name="contact_form" action="#" method="post">
-                          <div class="row">
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label class="form-label">First name</label>
-                                <input class="form-control form_control" type="text">
-                              </div>
-                            </div>
-                            <div class="col-sm-6">
-                              <div class="form-group">
-                                <label class="form-label">Last name</label>
-                                <input class="form-control form_control" type="text">
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">Company name (optional)</label>
-                                <input class="form-control form_control" type="text">
-                              </div>
-                            </div>
-                            <div class="col-lg-12">
-                              <div class="form-group">
-                                <label class="form-label">Country / Region *</label>
-                                <div class="checkout_country_form actegory">
-                                  <select class="custom_select_dd" id="selectbox_alCategory2">
-                                    <option>Country</option>
-                                    <option value="Turkey">Turkey</option>
-                                    <option value="United Kingdom">United Kingdom</option>
-                                    <option value="United States">United States</option>
-                                    <option value="Ukraine">Ukraine</option>
-                                    <option value="Uruguay">Uruguay</option>
-                                    <option value="UK">UK</option>
-                                    <option value="Uzbekistan">Uzbekistan</option>
-                                  </select>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">Street address *</label>
-                                <input class="form-control form_control mb10" type="text">
-                                <input class="form-control form_control" type="text">
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">Town / City *</label>
-                                <input class="form-control form_control" type="number">
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">State *</label>
-                                <div class="checkout_country_form actegory">
-                                  <select class="custom_select_dd" id="selectbox_alCategory3">
-                                    <option>Country</option>
-                                    <option value="Istanbul">Istanbul</option>
-                                    <option value="London">London</option>
-                                    <option value="NewYork">New York</option>
-                                    <option value="Paris">Paris</option>
-                                    <option value="Dubai">Dubai</option>
-                                    <option value="Rome">Rome</option>
-                                    <option value="Singapore">Singapore</option>
-                                  </select>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">ZIP *</label>
-                                <input class="form-control form_control" type="text">
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">Phone *</label>
-                                <input name="form_phone" class="form-control form_control" type="number">
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group">
-                                <label class="form-label">Your Email</label>
-                                <input name="form_email" class="form-control form_control email" type="email">
-                              </div>
-                            </div>
-                            <div class="col-sm-12">
-                            </div>
-                            <div class="col-sm-12">
-                              <div class="form-group mb0">
-                                <label class="ai_title">Order notes (optional)</label>
-                                <textarea name="form_message" class="form-control" rows="12" placeholder=""></textarea>
-                              </div>
-                            </div>
-                          </div>
-                        </form>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-lg-4 col-xl-3">
-                    <div class="order_sidebar_widget mb30">
-                      <h4 class="title">Your Order</h4>
-                      <ul>
-                        <li class="subtitle"><p>Product <span class="float-end">Subtotal</span></p> <hr></li>
-                        <li><p class="product_name_qnt">Silver Heinz Ketchup X 2 <span class="float-end">$259.00</span></p></li>
-                        <li><p class="product_name_qnt">Pineapple (Tropical Gold) x 3 <span class="float-end">$259.00</span></p></li>
-                        <li><p class="product_name_qnt">Pineapple (Tropical Gold) x 4 <span class="float-end">$259.00</span></p></li>
-                        <li class="subtitle"><hr></li>
-                        <li>
-                          <div class="ui_kit_radiobox shopping_cart_radio_box">
-                            <div class="radio">
-                              <input id="radio_one" name="radio" type="radio" checked="">
-                              <label for="radio_one"><span class="car_for_shipping">Shipping</span><span class="radio-label"></span>Flat rate: <span class="fwb text-thm">$20.00</span></label>
-                            </div>
-                            <div class="radio">
-                              <input id="radio_two" name="radio" type="radio">
-                              <label for="radio_two"><span class="radio-label"></span>Free shipping</label>
-                            </div>
-                            <div class="radio">
-                              <input id="radio_three" name="radio" type="radio">
-                              <label for="radio_three"><span class="radio-label"></span>Local pickup: <span class="fwb text-thm">$25.00</span></label>
-                            </div>
-                            <div class="radio">
-                              <label for="radio_four"><span class="radio-label"></span> Shipping to AL.</label>
-                            </div>
-                            <div class="radio">
-                              <label for="radio_four"><span class="radio-label"></span> <span class="fz14 fwb tdu text-thm">Change address</span></label>
-                            </div>
-                          </div>
-                        </li>
-                        <li class="subtitle"><hr></li>
-                        <li class="subtitle"><p>Subtotal <span class="float-end totals text-thm">$907.00</span></p></li>
-                        <li class="subtitle"><hr></li>
-                      </ul>
-                      <div class="ui_kit_radiobox checkout">
-                        <div class="radio">
-                          <input id="radio_five" name="radio" type="radio" checked="">
-                          <label for="radio_five"><span class="radio-label"></span> Direct bank transfer</label>
-                        </div>
-                        <div class="bt_details">
-                          <p>Make your payment directly into our bank account. Please use your Order ID as the payment reference.Your order will not be shipped until the funds have.</p>
-                        </div>
-                        <div class="radio">
-                          <input id="radio_six" name="radio" type="radio">
-                          <label for="radio_six"><span class="radio-label"></span> Cash on delivery</label>
-                        </div>
-                        <div class="radio">
-                          <input id="radio_seven" name="radio" type="radio">
-                          <label for="radio_seven"><span class="radio-label"></span> PayPal What is PayPal? <img src="images/resource/payment.png" alt="payment.png"></label>
-                        </div>
-                      </div>
-                      <div class="ui_kit_button payment_widget_btn">
-                        <button type="button" class="btn btn-thm btn-block">PLACE ORDER</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="tab-pane fade" id="prder" role="tabpanel" aria-labelledby="prder-tab">
-                <div class="row justify-content-center">
-                  <div class="col-lg-6">
-                    <div class="order_complete_message text-center">
-                      <div class="icon bgc-thm"><span class="fa fa-check text-white"></span></div>
-                      <h2>Your Order Is Completed !</h2>
-                      <p class="fz14">Thank you. Your order has been received.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-xl-8 offset-xl-2">
-                    <div class="shop_order_box mt40">
-                      <div class="order_list_raw">
-                        <ul>
-                          <li class="list-inline-item">
-                            <p>Order Number</p>
-                            <h5>13119</h5>
-                          </li>
-                          <li class="list-inline-item">
-                            <p>Date</p>
-                            <h5>27/07/2021</h5>
-                          </li>
-                          <li class="list-inline-item">
-                            <p>Total</p>
-                            <h5>$40.10</h5>
-                          </li>
-                          <li class="list-inline-item">
-                            <p>Payment Method</p>
-                            <h5>Direct Bank Transfer</h5>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="order_details">
-                        <h4 class="title text-center mb40">ORDER DETAILS</h4>
-                        <div class="od_content">
-                          <ul>
-                            <li class="subtitle bb1 mb20 pb5"><p>Product <span class="float-end">Subtotal</span></p></li>
-                            <li><p class="product_name_qnt">Silver Heinz Ketchup X 2 <span class="float-end">$259.00</span></p></li>
-                            <li><p class="product_name_qnt">Pineapple (Tropical Gold) x 3 <span class="float-end">$259.00</span></p></li>
-                            <li><p class="product_name_qnt">Pineapple (Tropical Gold) x 4 <span class="float-end">$259.00</span></p></li>
-                            <li class="subtitle bb1 mb15 mt20"><p>Subtotal <span class="float-end">$59.00</span></p></li>
-                            <li class="subtitle bb1 mb20"><p>Shipping <span class="float-end fwn_bd_color">Free shipping</span></p></li>
-                            <li class="subtitle bb1 mb20"><p>Vat <span class="float-end totals color-orose">$9.00</span></p></li>
-                            <li class="subtitle bb1 mb20"><p>Payment Method <span class="float-end fwn_bd_color">Direct bank transfer</span></p></li>
-                            <li class="subtitle"><p>Total <span class="float-end totals text-thm">$259.00</span></p></li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-		</div>
-	</section>
+             
+
+
