--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -875,9 +875,9 @@
 <script src="~/Asset/js/wow.min.js"></script> 
 <!-- Custom script for all pages --> 
 <script src="~/Asset/js/script.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+@*<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>*@
 <script src="https://cdn.tiny.cloud/1/t0cc6iw0zgyf2cce0nwq9yqftiwgrw6obfqmb1b45t650dfj/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
-
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
