--- a/SuperMarket_Client/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/Register.cshtml
@@ -37,6 +37,16 @@
                 <span asp-validation-for="Input.Address" class="text-danger"></span>
             </div>
             <div class="form-floating py-2 col-6">
+                <input asp-for="Input.City" class="form-control"  aria-required="true" />
+                <label asp-for="Input.City"></label>
+                <span asp-validation-for="Input.City" class="text-danger"></span>
+            </div>
+            <div class="form-floating py-2 col-6">
+                <input asp-for="Input.Country" class="form-control"  aria-required="true" />
+                <label asp-for="Input.Country"></label>
+                <span asp-validation-for="Input.Country" class="text-danger"></span>
+            </div>
+            <div class="form-floating py-2 col-6">
                 <input asp-for="Input.PhoneNumber" class="form-control"  aria-required="true" />
                 <label asp-for="Input.PhoneNumber"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
