--- a/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,8 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
